nav bar in progress

--- a/index.html
+++ b/index.html
@@ -8,50 +8,41 @@
   <title>⚔🛡VengerStore</title>
   <link rel="stylesheet" href="css\nav.css">
   <link rel="stylesheet" href="css\fonts.css">
+  <link rel="stylesheet" href="css\body.css">
+  <link rel="stylesheet" href="css\footer.css">
 </head>
 
 <body>
+
   <nav id="main-nav">
+    <div class="logo">
+      <div class="in">⚔<span>Venger</span>⚔</div>
+    </div>
 
-    <h1>⚔<span>Venger</span>⚔</h1>
+    <div class="top-links">
+      <a href="" class="nav-link">help</a>
+      <i class="delimiter">|</i>
+      <a href="" class="nav-link">orders</a>
+      <i class="delimiter">|</i>
+      <!-- TODO: log in -->
+    </div>
 
-    <ul class="upper-nav-ul">
+    <div class="bot-links">
+      <a href="" class="nav-link">men</a>
+      <i class="delimiter">|</i>
+      <a href="" class="nav-link">women</a>
+      <i class="delimiter">|</i>
 
-      <li class="upper-nav-li">
-        <a href="">help</a>
-        <i class="nav-delimiter">|</i>
-      </li>
-
-      <li class="upper-nav-li">
-        <a href="">about store</a>
-        <i class="nav-delimiter">|</i>
-      </li>
-
-      <li class="upper-nav-li">
-        <a href="">order list</a>
-      </li>
-
-      <li>
-        <div class="log-in">
-          <a href="">log in</a>
-        </div>
-      </li>
-
-    </ul>
-
-
-
-    <ul class="lower-nav-ul">
-      <li class="lower-nav-li">
-        <a href="">goods</a>
-        <i class="nav-delimiter">|</i>
-      </li>
-      <li class="lower-nav-li">
-        <a href="">suppliers</a>
-      </li>
-    </ul>
+    </div>
 
   </nav>
+  <div id="main-part">
+
+  </div>
+  <footer id="main-footer">
+    <!-- TODO:footer -->
+  </footer>
+
 </body>
 
 </html>
