--- a/index.html
+++ b/index.html
@@ -10,31 +10,39 @@
   <link rel="stylesheet" href="css\fonts.css">
   <link rel="stylesheet" href="css\body.css">
   <link rel="stylesheet" href="css\footer.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 </head>
 
 <body>
 
   <nav id="main-nav">
     <div class="logo">
-      <div class="in">⚔<span>Venger</span>⚔</div>
+        <div class="in">⚔<span>Venger</span>⚔</div>
     </div>
 
-    <div class="top-links">
-      <a href="" class="nav-link">help</a>
-      <i class="delimiter">|</i>
-      <a href="" class="nav-link">orders</a>
-      <i class="delimiter">|</i>
-      <!-- TODO: log in -->
+
+
+    <div class=links>
+      <div class="top-links">
+        <a href="">help</a>
+        <span class="delimiter">|</span>
+        <a href="">orders</a>
+        <!-- <span class="delimiter">|</span> -->
+        <div id="log-in">
+          log in <i class="far fa-user"></i>
+          <!-- TODO: log in -->
+        </div>
+
+      </div>
+
+      <div class="bot-links">
+        <a href="">men</a>
+        <span class="delimiter">|</span>
+        <a href="">women</a>
+        <span class="delimiter">|</span>
+        <a href="">firms</a>
+      </div>
     </div>
-
-    <div class="bot-links">
-      <a href="" class="nav-link">men</a>
-      <i class="delimiter">|</i>
-      <a href="" class="nav-link">women</a>
-      <i class="delimiter">|</i>
-
-    </div>
-
   </nav>
   <div id="main-part">
 
