--- a/index.html
+++ b/index.html
@@ -12,10 +12,33 @@
   <link rel="stylesheet" href="css\footer.css">
   <link rel="stylesheet" href="css\container.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-
-</head>
+  <script src="main.js" type="text/javascript"></script>
+  </head>
 
 <body>
+<style>
+
+body {
+overflow:hidden;
+margin:0;
+padding:0;
+}
+#bubbles {
+background:#477ab9;
+width:100%;
+-webkit-transition: all 0.4s ease-in-out;
+-moz-transition: all 0.4s ease-in-out;
+-ms-transition: all 0.4s ease-in-out;
+-o-transition: all 0.4s ease-in-out;
+transition: all 0.4s ease-in-out;
+}
+#bubbles:hover {
+background:#3D689C;
+}
+
+
+</style>
+
   <div class="nav-container">
     <nav id="main-nav">
       <div class="logo">
@@ -35,11 +58,27 @@
         </div>
 
         <div class="bot-links">
-          <a href="">men</a>
+          <section class="section">
+            <a href="">men</a>
+            <div class="hiden-part"  id="lines">
+AAAAAAAAAAAAAAAAAAAAAAAAAA
+              <canvas id="bubbles"></canvas>
+            </div>
+          </section>
           <span class="delimiter">|</span>
-          <a href="">women</a>
+          <section class="section">
+            <a href="">women</a>
+            <div class="hiden-part">
+
+            </div>
+          </section>
           <span class="delimiter">|</span>
-          <a href="">firms</a>
+          <section class="section">
+            <a href="">firms</a>
+            <div class="hiden-part">
+
+            </div>
+          </section>
         </div>
       </div>
     </nav>
