--- a/index.html
+++ b/index.html
@@ -5,44 +5,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>⚔🛡VengerStore</title>
-  <link rel="stylesheet" href="css\nav.css">
-  <link rel="stylesheet" href="css\fonts.css">
-  <link rel="stylesheet" href="css\body.css">
-  <link rel="stylesheet" href="css\footer.css">
-  <link rel="stylesheet" href="css\container.css">
+  <title>⚔️🛡VengerStore</title>
+  <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/fonts.css">
+  <link rel="stylesheet" href="css/body.css">
+  <link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="css/container.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-  <script src="main.js" type="text/javascript"></script>
+  <script type="text/javascript" src="js/main.js">
+</script>
   </head>
 
+
 <body>
-<style>
-
-body {
-overflow:hidden;
-margin:0;
-padding:0;
-}
-#bubbles {
-background:#477ab9;
-width:100%;
--webkit-transition: all 0.4s ease-in-out;
--moz-transition: all 0.4s ease-in-out;
--ms-transition: all 0.4s ease-in-out;
--o-transition: all 0.4s ease-in-out;
-transition: all 0.4s ease-in-out;
-}
-#bubbles:hover {
-background:#3D689C;
-}
-
-
-</style>
-
-  <div class="nav-container">
+<div class="nav-container">
     <nav id="main-nav">
       <div class="logo">
-        <div class="in">⚔<span>Venger</span>⚔</div>
+        <div class="in">⚔️<span>Venger</span>⚔️</div>
       </div>
       <div class=links>
         <div class="top-links">
@@ -60,16 +39,16 @@ background:#3D689C;
         <div class="bot-links">
           <section class="section">
             <a href="">men</a>
-            <div class="hiden-part"  id="lines">
-AAAAAAAAAAAAAAAAAAAAAAAAAA
-              <canvas id="bubbles"></canvas>
+            <div class="hiden-part">
+
+              <canvas class="bubbles">AAAAAAAAAAAAAAAAAAAAAAAAAA</canvas>
             </div>
           </section>
           <span class="delimiter">|</span>
           <section class="section">
             <a href="">women</a>
             <div class="hiden-part">
-
+              <canvas class="bubbles">AAAAAAAAAAAAAAAAAAAAAAAAAA</canvas>
             </div>
           </section>
           <span class="delimiter">|</span>
@@ -91,7 +70,7 @@ AAAAAAAAAAAAAAAAAAAAAAAAAA
   <footer id="main-footer">
     <!-- TODO:footer -->
   </footer>
-
 </body>
+
 
 </html>
