--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   <link rel="stylesheet" href="css/container.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
   <script type="text/javascript" src="js/main.js">
-</script>
-  </head>
+  </script>
+</head>
 
 
 <body>
-<div class="nav-container">
+  <div class="nav-container">
     <nav id="main-nav">
       <div class="logo">
         <div class="in">⚔️<span>Venger</span>⚔️</div>
@@ -40,22 +40,113 @@
           <section class="section">
             <a href="">men</a>
             <div class="hiden-part">
+              <canvas class="bubbles"></canvas>
+              <div class="ul-container">
+                <section>
+                  <h2>Title</h2>
+                  <ul>
+                    <li>section.0.0</li>
+                    <li>section.0.1</li>
+                    <li>section.0.2</li>
+                    <li>section.0.3</li>
+                  </ul>
+                </section>
+                <section>
+                  <h2>Title</h2>
+                  <ul>
+                    <li>section.0.0</li>
+                    <li>section.0.1</li>
+                    <li>section.0.2</li>
+                    <li>section.0.3</li>
+                  </ul>
+                </section>
+                <section>
+                  <h2>Title</h2>
+                  <ul>
+                    <li>section.0.0</li>
+                    <li>section.0.1</li>
+                    <li>section.0.2</li>
+                    <li>section.0.3</li>
+                  </ul>
+                </section>
+              </div>
 
-              <canvas class="bubbles">AAAAAAAAAAAAAAAAAAAAAAAAAA</canvas>
             </div>
           </section>
           <span class="delimiter">|</span>
           <section class="section">
             <a href="">women</a>
             <div class="hiden-part">
-              <canvas class="bubbles">AAAAAAAAAAAAAAAAAAAAAAAAAA</canvas>
+              <canvas class="bubbles"></canvas>
+              <div class="ul-container">
+                <section>
+                  <h2>Title</h2>
+                  <ul>
+                    <li>section.0.0</li>
+                    <li>section.0.1</li>
+                    <li>section.0.2</li>
+                    <li>section.0.3</li>
+                  </ul>
+                </section>
+                <section>
+                  <h2>Title</h2>
+                  <ul>
+                    <li>section.0.0</li>
+                    <li>section.0.1</li>
+                    <li>section.0.2</li>
+                    <li>section.0.3</li>
+                  </ul>
+                </section>
+                <section>
+                  <h2>Title</h2>
+                  <ul>
+                    <li>section.0.0</li>
+                    <li>section.0.1</li>
+                    <li>section.0.2</li>
+                    <li>section.0.3</li>
+                  </ul>
+                </section>
+              </div>
+
             </div>
           </section>
           <span class="delimiter">|</span>
           <section class="section">
             <a href="">firms</a>
             <div class="hiden-part">
+              <div class="hiden-part">
+                <canvas class="bubbles"></canvas>
+                <div class="ul-container">
+                  <section>
+                    <h2>Title</h2>
+                    <ul>
+                      <li>section.0.0</li>
+                      <li>section.0.1</li>
+                      <li>section.0.2</li>
+                      <li>section.0.3</li>
+                    </ul>
+                  </section>
+                  <section>
+                    <h2>Title</h2>
+                    <ul>
+                      <li>section.0.0</li>
+                      <li>section.0.1</li>
+                      <li>section.0.2</li>
+                      <li>section.0.3</li>
+                    </ul>
+                  </section>
+                  <section>
+                    <h2>Title</h2>
+                    <ul>
+                      <li>section.0.0</li>
+                      <li>section.0.1</li>
+                      <li>section.0.2</li>
+                      <li>section.0.3</li>
+                    </ul>
+                  </section>
+                </div>
 
+              </div>
             </div>
           </section>
         </div>
