--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
   <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/container.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-  <script type="text/javascript" src="js/main.js">
-  </script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+  <script type="text/javascript" src="js/main.js"></script>
 </head>
 
 
 <body>
+  <canvas class="anime"></canvas><script  src="js/BackCircles.js"></script>
+
   <div class="nav-container">
-    <nav id="main-nav">
+    <nav id="main-nav"> 
       <div class="logo">
         <div class="in">⚔️<span>Venger</span>⚔️</div>
       </div>
@@ -156,11 +158,12 @@
 
 
   <div id="main-container">
-    РРРРРРРРРРРРРРРРРРРРРРР
+
   </div>
   <footer id="main-footer">
     <!-- TODO:footer -->
   </footer>
+
 </body>
 
 
