--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <canvas class="anime"></canvas><script  src="js/BackCircles.js"></script>
 
   <div class="nav-container">
-    <nav id="main-nav"> 
+    <nav id="main-nav">
       <div class="logo">
         <div class="in">⚔️<span>Venger</span>⚔️</div>
       </div>
@@ -40,44 +40,7 @@
 
         <div class="bot-links">
           <section class="section">
-            <a href="">men</a>
-            <div class="hiden-part">
-              <canvas class="bubbles"></canvas>
-              <div class="ul-container">
-                <section>
-                  <h2>Title</h2>
-                  <ul>
-                    <li>section.0.0</li>
-                    <li>section.0.1</li>
-                    <li>section.0.2</li>
-                    <li>section.0.3</li>
-                  </ul>
-                </section>
-                <section>
-                  <h2>Title</h2>
-                  <ul>
-                    <li>section.0.0</li>
-                    <li>section.0.1</li>
-                    <li>section.0.2</li>
-                    <li>section.0.3</li>
-                  </ul>
-                </section>
-                <section>
-                  <h2>Title</h2>
-                  <ul>
-                    <li>section.0.0</li>
-                    <li>section.0.1</li>
-                    <li>section.0.2</li>
-                    <li>section.0.3</li>
-                  </ul>
-                </section>
-              </div>
-
-            </div>
-          </section>
-          <span class="delimiter">|</span>
-          <section class="section">
-            <a href="">women</a>
+            <a href="">product type</a>
             <div class="hiden-part">
               <canvas class="bubbles"></canvas>
               <div class="ul-container">
@@ -115,6 +78,43 @@
           <span class="delimiter">|</span>
           <section class="section">
             <a href="">firms</a>
+            <div class="hiden-part">
+              <canvas class="bubbles"></canvas>
+              <div class="ul-container">
+                <section>
+                  <h2>Title</h2>
+                  <ul>
+                    <li>section.0.0</li>
+                    <li>section.0.1</li>
+                    <li>section.0.2</li>
+                    <li>section.0.3</li>
+                  </ul>
+                </section>
+                <section>
+                  <h2>Title</h2>
+                  <ul>
+                    <li>section.0.0</li>
+                    <li>section.0.1</li>
+                    <li>section.0.2</li>
+                    <li>section.0.3</li>
+                  </ul>
+                </section>
+                <section>
+                  <h2>Title</h2>
+                  <ul>
+                    <li>section.0.0</li>
+                    <li>section.0.1</li>
+                    <li>section.0.2</li>
+                    <li>section.0.3</li>
+                  </ul>
+                </section>
+              </div>
+
+            </div>
+          </section>
+          <span class="delimiter">|</span>
+          <section class="section">
+            <a href="">filter</a>
             <div class="hiden-part">
               <div class="hiden-part">
                 <canvas class="bubbles"></canvas>
