--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <canvas class="anime"></canvas><script  src="js/BackCircles.js"></script>
 
   <div class="nav-container">
-    <nav id="main-nav"> 
+    <nav id="main-nav">
       <div class="logo">
         <div class="in">⚔️<span>Venger</span>⚔️</div>
       </div>
@@ -40,7 +40,7 @@
 
         <div class="bot-links">
           <section class="section">
-            <a href="">men</a>
+            <a>men</a>
             <div class="hiden-part">
               <canvas class="bubbles"></canvas>
               <div class="ul-container">
